force-app/main/default/objects/Target__c/Target__c.object-meta.xml
<CustomObject>
    <description>2/20/13 - Object no longer in use, data no longer provided by Finance (per Sue Drumm, Winston Wicker)


Used to show target data to reps and their managers. Contacts - Sue Drumm, Winston Wicker</description>
    <label>Target</label>
    <nameField>
        <label>Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Targets</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>