force-app/main/default/objects/Target__c/fields/About_Targets__c.field-meta.xml
<CustomField>
    <fullName>About_Targets__c</fullName>
    <defaultValue>&quot;Targets are loaded following monthly close.Targets were developed using prior year sales and margin data and segment specific growth rates. Any discrepancies or issues should be discussed with your manager.&quot;</defaultValue>
    <label>About Targets</label>
    <type>TextArea</type>
</CustomField>