force-app/main/default/objects/Target__c/fields/Annual_Sales_Target__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sales_Target__c</fullName>
    <inlineHelpText>Annual Sales Target for the Current Fiscal Year</inlineHelpText>
    <label>Annual Sales Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>