force-app/main/default/objects/Target__c/fields/Annual_Sell_Margin_Target__c.field-meta.xml
<CustomField>
    <fullName>Annual_Sell_Margin_Target__c</fullName>
    <inlineHelpText>Sell Margin Target for the Current Fiscal Year</inlineHelpText>
    <label>Annual Sell Margin Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>