force-app/main/default/objects/Target__c/fields/Default_Close_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Default_Close_Ratio__c</fullName>
    <defaultValue>25</defaultValue>
    <label>Default Close Ratio</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>