force-app/main/default/objects/Target__c/fields/Default_Realization_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Default_Realization_Ratio__c</fullName>
    <defaultValue>60</defaultValue>
    <label>Default Realization Ratio</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>