force-app/main/default/objects/Target__c/fields/Min_Pipeline_Amount__c.field-meta.xml
<CustomField>
    <fullName>Min_Pipeline_Amount__c</fullName>
    <formula>(YTD_Sales_Variance__c / Default_Close_Ratio__c / Default_Realization_Ratio__c)*-1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>YTD_Sales_Variance * Default_Close_Ratio * Default_Realization_Ratio*-1</inlineHelpText>
    <label>Min Pipeline Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>