force-app/main/default/objects/Target__c/fields/Mth__c.field-meta.xml
<CustomField>
    <fullName>Mth__c</fullName>
    <inlineHelpText>These numbers represent budget information as of this month&apos;s close.</inlineHelpText>
    <label>Mth</label>
    <length>20</length>
    <type>Text</type>
</CustomField>