force-app/main/default/objects/Target__c/fields/Mth_Sales_Actual__c.field-meta.xml
<CustomField>
    <fullName>Mth_Sales_Actual__c</fullName>
    <inlineHelpText>Month Net Actual Sales</inlineHelpText>
    <label>Mth Sales Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>