force-app/main/default/objects/Target__c/fields/Mth_Sales_Target__c.field-meta.xml
<CustomField>
    <fullName>Mth_Sales_Target__c</fullName>
    <inlineHelpText>Month Sales Net Target</inlineHelpText>
    <label>Mth Sales Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>