force-app/main/default/objects/Target__c/fields/Mth_Sales_Variance__c.field-meta.xml
<CustomField>
    <fullName>Mth_Sales_Variance__c</fullName>
    <label>Mth Sales Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>