force-app/main/default/objects/Target__c/fields/Mth_Sell_Margin_Target__c.field-meta.xml
<CustomField>
    <fullName>Mth_Sell_Margin_Target__c</fullName>
    <label>Mth Sell Margin Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>