force-app/main/default/objects/Target__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <label>Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PRINTING IMAGING</fullName>
            </value>
            <value>
                <fullName>PACKAGING</fullName>
            </value>
            <value>
                <fullName>FACILITY SUPPLIES</fullName>
            </value>
            <value>
                <fullName>TOTAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>