force-app/main/default/objects/Target__c/fields/YTD_Sales_Actual__c.field-meta.xml
<CustomField>
    <fullName>YTD_Sales_Actual__c</fullName>
    <inlineHelpText>Net YTD Sales Actual</inlineHelpText>
    <label>YTD Sales Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>