force-app/main/default/objects/Target__c/fields/YTD_Sales_Target__c.field-meta.xml
<CustomField>
    <fullName>YTD_Sales_Target__c</fullName>
    <inlineHelpText>Net YTD Sales Target</inlineHelpText>
    <label>YTD Sales Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>