force-app/main/default/objects/Target__c/fields/YTD_Sales_Variance__c.field-meta.xml
<CustomField>
    <fullName>YTD_Sales_Variance__c</fullName>
    <label>YTD Sales Variance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>