force-app/main/default/objects/Target__c/fields/YTD_Sell_Margin_Actual__c.field-meta.xml
<CustomField>
    <fullName>YTD_Sell_Margin_Actual__c</fullName>
    <label>YTD Sell Margin Actual</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>